--- a/ABIMSIM/Base.lproj/Main.storyboard
+++ b/ABIMSIM/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <mutableArray key="Voltaire-Regular.ttf">
             <string>Voltaire</string>
             <string>Voltaire</string>
-            <string>Voltaire</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -258,8 +257,8 @@
                                                 <state key="selected" image="PlayText_1"/>
                                                 <state key="highlighted" image="PlayText_1"/>
                                                 <connections>
-                                                    <action selector="playPausedDeselect:" destination="LVB-YS-i5n" eventType="touchDragExit" id="4EH-nl-WQ0"/>
-                                                    <action selector="playPausedSelect:" destination="LVB-YS-i5n" eventType="touchDragEnter" id="1jY-Di-lsJ"/>
+                                                    <action selector="mainMenuSelect:" destination="LVB-YS-i5n" eventType="touchDragEnter" id="wqj-Wm-BLT"/>
+                                                    <action selector="playPausedDeselect:" destination="LVB-YS-i5n" eventType="touchDragExit" id="PGs-bH-bxq"/>
                                                     <action selector="playPausedSelect:" destination="LVB-YS-i5n" eventType="touchDown" id="U5h-Aq-w3J"/>
                                                     <action selector="playPausedTouchUpInside:" destination="LVB-YS-i5n" eventType="touchUpInside" id="0xD-RA-iU6"/>
                                                 </connections>
@@ -289,9 +288,9 @@
                                                 <state key="selected" image="MainMenuText_1"/>
                                                 <state key="highlighted" image="MainMenuText_1"/>
                                                 <connections>
-                                                    <action selector="mainMenuDeselect:" destination="LVB-YS-i5n" eventType="touchDragExit" id="9BS-pl-DWl"/>
+                                                    <action selector="mainMenuDeselect:" destination="LVB-YS-i5n" eventType="touchDragExit" id="Ngy-Cf-bTO"/>
                                                     <action selector="mainMenuSelect:" destination="LVB-YS-i5n" eventType="touchDown" id="8qb-nT-bus"/>
-                                                    <action selector="mainMenuSelect:" destination="LVB-YS-i5n" eventType="touchDragEnter" id="DBe-hm-zjY"/>
+                                                    <action selector="mainMenuSelect:" destination="LVB-YS-i5n" eventType="touchDragEnter" id="YGd-0d-u5Z"/>
                                                     <action selector="mainMenuTouchUpInside:" destination="LVB-YS-i5n" eventType="touchUpInside" id="kxH-jj-Y4U"/>
                                                 </connections>
                                             </button>
@@ -322,12 +321,6 @@
                                             <constraint firstAttribute="trailing" secondItem="OZl-uo-gA5" secondAttribute="trailing" id="qPP-j6-M8Y"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SETTINGS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGR-tm-Uje">
-                                        <rect key="frame" x="122" y="453" width="77" height="29"/>
-                                        <fontDescription key="fontDescription" name="Voltaire" family="Voltaire" pointSize="23"/>
-                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MUSIC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXl-aB-gkU">
                                         <rect key="frame" x="91" y="520" width="38" height="22"/>
                                         <fontDescription key="fontDescription" name="Voltaire" family="Voltaire" pointSize="17"/>
@@ -356,15 +349,17 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SettingsText" translatesAutoresizingMaskIntoConstraints="NO" id="WPZ-gz-Imt">
+                                        <rect key="frame" x="115" y="455" width="90" height="27"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="sGR-tm-Uje" secondAttribute="bottom" constant="86" id="6QM-jR-Jev"/>
                                     <constraint firstAttribute="bottom" secondItem="kkp-4F-fHs" secondAttribute="bottom" constant="26" id="BfV-z9-L4m"/>
                                     <constraint firstAttribute="bottom" secondItem="OXl-aB-gkU" secondAttribute="bottom" constant="26" id="Cyz-xp-5RQ"/>
                                     <constraint firstAttribute="centerX" secondItem="kkp-4F-fHs" secondAttribute="centerX" constant="-50" id="JfK-kn-Kew"/>
+                                    <constraint firstAttribute="centerX" secondItem="WPZ-gz-Imt" secondAttribute="centerX" id="P3A-MD-71e"/>
                                     <constraint firstItem="3DV-ae-o5i" firstAttribute="top" secondItem="UPK-yd-Ke5" secondAttribute="top" constant="56" id="Sej-qR-nah"/>
-                                    <constraint firstAttribute="centerX" secondItem="sGR-tm-Uje" secondAttribute="centerX" id="VIH-Qc-Gyi"/>
                                     <constraint firstAttribute="centerY" secondItem="HYe-Tk-bR4" secondAttribute="centerY" constant="12" id="Xia-0F-VSd"/>
                                     <constraint firstItem="OXl-aB-gkU" firstAttribute="top" secondItem="Lem-Ht-1rC" secondAttribute="bottom" id="cAl-iZ-SCm"/>
                                     <constraint firstAttribute="centerX" secondItem="Lem-Ht-1rC" secondAttribute="centerX" constant="50" id="eVx-02-I1k"/>
@@ -373,6 +368,7 @@
                                     <constraint firstAttribute="centerX" secondItem="HYe-Tk-bR4" secondAttribute="centerX" constant="-6" id="rhy-r8-qyt"/>
                                     <constraint firstAttribute="centerX" secondItem="OXl-aB-gkU" secondAttribute="centerX" constant="50" id="sIp-Vz-D4V"/>
                                     <constraint firstAttribute="centerX" secondItem="3DV-ae-o5i" secondAttribute="centerX" id="vHM-su-lWT"/>
+                                    <constraint firstItem="27y-dQ-ftX" firstAttribute="top" secondItem="WPZ-gz-Imt" secondAttribute="bottom" constant="8" id="yVw-az-TcN"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -459,6 +455,7 @@
         <image name="Play_1" width="150" height="150"/>
         <image name="Play_2" width="150" height="150"/>
         <image name="Play_3" width="158" height="158"/>
+        <image name="SettingsText" width="90" height="27"/>
         <image name="UpgradesText_0" width="74" height="20"/>
         <image name="UpgradesText_1" width="75" height="21"/>
         <image name="Upgrades_0" width="96" height="96"/>
